# enjo

./: .gitignore  .ignore  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md  changelog.config.js
.forgejo/workflows/: clippy.yaml
.github/workflows/: build.yml  ci.yml  clippy.yaml  main.yml  release.yml
crates/enjo_config/: Cargo.toml
crates/enjo_config/src/: config.rs  manager.rs
crates/enjo_configs/: Cargo.toml
crates/enjo_configs/src/: config.rs  lib.rs  manager.rs
crates/enjo_tools/: Cargo.toml
crates/enjo_tools/src/: args.rs  container.rs  lib.rs  proc.rs  term.rs
docs/: BUILDING.md  CONFIGURATION.md
src/: actions.rs  app.rs  args.rs  autocomplete.rs  cli.rs  colors.rs  config.rs  constants.rs  container.rs  errors.rs  lib.rs  library.rs  main.rs  manager.rs  platform.rs  proc.rs  program.rs  projects.rs  storage.rs  templates.rs  term.rs  terminal.rs  utils.rs
src/commands/: config.rs  mod.rs  root.rs  templates.rs
src/configs/: config.rs  manager.rs
src/handlers/: config.rs  mod.rs  templates.rs
src/tests/: mod.rs  test_autocomplete.rs  test_container.rs  test_library.rs  test_project.rs
src/tools/: args.rs  container.rs  mod.rs
