[package]
name = "enjo"
description = "Yet another projects manager."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
repository = "https://github.com/kostya-zero/enjo"
homepage = "https://github.com/kostya-zero/enjo"
keywords = ["workspace", "projects", "manager", "cli"]
readme = "README.md"
license = "MIT"
version = "0.5.2"
edition = "2021"

[[bin]]
name = "enjo"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
clap = "4.5.7"
dialoguer = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
toml = "0.8.14"
url = "2.5.2"

[dev-dependencies]
tempfile = "3.10.1"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.4"

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
lto = true
debug = false
