[package]
name = "enjo"
description = "Yet another projects manager."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
repository = "https://github.com/kostya-zero/enjo"
homepage = "https://github.com/kostya-zero/enjo"
keywords = ["workspace", "projects", "manager", "cli"]
readme = "README.md"
license = "MIT"
version = "0.7.0-dev"
edition = "2024"

[[bin]]
name = "enjo"

[dependencies]
anyhow = "1"
clap = "4.5.7"
colored = "3.0.0"
dialoguer = "0.11.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
toml = "0.8.14"

[dev-dependencies]
tempfile = "3.10.1"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.4"

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
