[package]
name = "kanri"
description = "Manage your projects within the terminal."
authors = ["Konstantin Zhigaylo <zero@kostyazero.com>"]
repository = "https://github.com/kostya-zero/kanri"
homepage = "https://github.com/kostya-zero/kanri"
keywords = ["workspace", "projects", "manager", "cli"]
readme = "README.md"
license = "MIT"
version = "0.8.0-dev"
edition = "2024"

[[bin]]
name = "kanri"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.12.0"
dirs-next = "=2.0.0"
indicatif = "0.18.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
toml = "0.9.2"

[dev-dependencies]
tempfile = "3.20.0"

[target.'cfg(windows)'.dependencies]
ctrlc = "3.4.7"

[profile.dev]
incremental = false

[profile.release]
panic = "abort"
opt-level = 3
codegen-units = 1
incremental = false
lto = "thin"
debug = 0
strip = true
